syntax = "proto3";

package test;

// Test Service
service TestService {
  rpc GetData (Request) returns (Response);
}

message Request {
  string id = 1;
}

message Response {
  string data = 1;
}

// Checkout Service
service CheckoutService {
  rpc PlaceOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
}

// Payment Service
service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string user_id = 1;
  double amount = 2;
  string currency = 3;
  string payment_method = 4;
}

message PaymentResponse {
  string transaction_id = 1;
  bool success = 2;
}

// Inventory Service
service InventoryService {
  rpc CheckStock (StockRequest) returns (StockResponse);
}

message StockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
}

// Order Fulfillment Service
service FulfillmentService {
  rpc CreateOrder (OrderFulfillmentRequest) returns (OrderFulfillmentResponse);
}

message OrderFulfillmentRequest {
  string order_id = 1;
  string user_id = 2;
  string shipping_address = 3;
}

message OrderFulfillmentResponse {
  bool success = 1;
  string tracking_id = 2;
}
